# kwiver

./: .travis.yml
CMake/: kwiver-setup-python.cmake  kwiver-setup-scripts.cmake  kwiver-setup-tests-python.cmake
CMake/dashboard-scripts/: KWIVER_common.cmake
CMake/utils/: kwiver-utils-python.cmake  kwiver-utils-tests-python.cmake
python/: CMakeLists.txt  requirements.txt  setup.py
python/kwiver/: run_tests.sh
python/kwiver/arrows/core/wrappers/: arrow_core_wrap.yml
python/kwiver/arrows/serialize/json/: CMakeLists.txt
python/kwiver/arrows/serialize/json/wrappers/: serialize_json_wrapper.yml
python/kwiver/sprokit/pipeline/: CMakeLists.txt
python/kwiver/sprokit/pipeline/wrappers/: pipeline_wrapper.yml
python/kwiver/sprokit/pipeline_util/: CMakeLists.txt
python/kwiver/sprokit/pipeline_util/conf/: pipe_util_conf.yml
python/kwiver/sprokit/pipeline_util/wrappers/: pipeline_utils_wrapper.yml
python/kwiver/vital/algo/wrappers/: algo_mod_wrapper.yml
python/kwiver/vital/modules/: cxx_loaders.py  module_helpers.cxx
python/kwiver/vital/tests/: CMakeLists.txt  py_helpers.py  test_sfm_constraints.py
python/kwiver/vital/tests/cpp_helpers/: camera_helpers.cxx
python/kwiver/vital/types/: CMakeLists.txt  bounding_box.cxx  camera.cxx  covariance.cxx  descriptor.cxx  feature.cxx  feature_track_set.cxx  homography.cxx  landmark.cxx  rotation.cxx  sfm_constraints.cxx  similarity.cxx  type_casters.h
python/kwiver/vital/types/configs/: camera_config.yml  feature_mod_conf.yml  object_track_set_conf.yml  track_mod_config.yml
python/kwiver/vital/types/wrapper_inputs/: detected_object_wrapper.yml  metadata_wrapper.yml
vital/tests/: test_camera_from_metadata.cxx
